@@ -34,6 +34,9 @@
     BI:
     * 0669 FIX: Fixed regex matching in BI when using character groups [...]...
 
+    Reporting & Availability:
+    * 0750 FIX: Availability: fix exception when summary is on and some elements have never been OK
+
     Event Console:
     * 0672 FIX: Service item of "Check event state in event console" checks can now be configured...
 
